# thumbnails

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  sema.py  setup.cfg  thumbnails.py  thumbnails.vtt  tox.ini
.circleci/: config.yml
.github/workflows/: tests-linux.yml  tests-mac.yml  tests-windows.yml  tests.yml
ffmpeg/: __init__.py  ffmpeg.py
memo/: __main__.py
plyr/: README.md  package.json  plyr.conf
plyr/public/: index.html
plyr/src/: index.js
src/thumbnails/: __init__.py  __main__.py  cli.py  constants.py  ffmpeg.py  frame.py  generator.py  pathtools.py  progress.py  thumbnail.py  video.py
tests/: conftest.py  test_api.py  test_cli.py  test_platform.py
tests/data/snapshots/: relative-base-json  relative-base-vtt  specified-base-json  specified-base-vtt  specified-empty-base-json  specified-empty-base-vtt
thumbnails/: __init__.py  __main__.py  cli.py  ffmpeg.py  formatter.py  frame.py  pathtools.py  thumbnail.py  thumbnails.py  video.py
video.js/: index.html  videojs.thumbnails.css  videojs.thumbnails.js
