[metadata]
name = thumbnails
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    thumbnails
install_requires =
    click>=8.0.3
    imageio-ffmpeg>=0.4.7
    imageio>=2.23.0
    pillow>=8.4.0
python_requires = >=3.7
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 120