[metadata]
name = thumbnails
platforms = unix, linux, osx, win32
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Video

[options]
packages =
    thumbnails
install_requires =
    click>=8.0.3
    imageio-ffmpeg>=0.4.7
    imageio>=2.23.0
    pillow>=8.4.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    thumbnails = thumbnails.__main__:main

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
