[metadata]
name = thumbnails
version = attr: thumbnails.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Video thumbnail generator for modern web video players
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysnippet/thumbnails
keywords =
    vtt
    json
    thumbnail
    generator
    thumbnails
    thumbnail-generator
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Video

[options]
packages =
    thumbnails
install_requires =
    av==9.2.0
    click>=8.0.3
    imageio-ffmpeg>=0.4.7
    imageio>=2.23.0
    pillow>=8.4.0
    rich>=13.0.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    thumbnails = thumbnails.__main__:main

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
